[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# cbqn = { git = "https://github.com/Detegr/cbqn-rs" }
rand = { version = "0.7.2"}